--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: [test, lint, scan_ruby] 
+    needs: [test, lint]
     steps:
       - uses: actions/checkout@v4
 
